--- a/sesion2/eva/package.json
+++ b/sesion2/eva/package.json
@@ -11,10 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "async": "^3.2.6",
     "express": "^4.21.1",
     "nodemailer": "^6.9.16",
-    "passport": "^0.7.0",
-    "sequelize": "^6.37.5"
+    "passport": "^0.7.0"
   }
 }
