--- a/sesion2/eva/package.json
+++ b/sesion2/eva/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
+    "lodash": "^4.17.21",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0"
   }
