--- a/sesion6/eje/tareas.json
+++ b/sesion6/eje/tareas.json
@@ -1,1 +1,5 @@
-[]
+[{
+    "id": "6cf21f922",
+    "titulo": "Estudiar JavaScript",
+    "contenido": "Estudiar JS del lado del servidor, utilizando node y yargs"
+}]
