--- a/sesion6/eje/package.json
+++ b/sesion6/eje/package.json
@@ -2,5 +2,16 @@
   "dependencies": {
     "uuid": "^11.0.3",
     "yargs": "^17.7.2"
-  }
+  },
+  "name": "eje",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
